--- a/BoE Supervision Report.ipynb
+++ b/BoE Supervision Report.ipynb
@@ -1066,6 +1066,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "After experimenting with different cluster numbers, I found the results with 4 clusters the most meaningful.\n",
+    "\n",
     "Based on my K-means clustering findings, I've identified distinct characteristics for each cluster. Here's a summarized overview:\n",
     "\n",
     "Cluster 0: Large Insurance Companies\n",
@@ -1133,6 +1135,11 @@
    "source": [
     "Based on the chart, it appears that our classifications align effectively for the \"Big\" firms category. However, there is a degree of ambiguity in delineating the other categories."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
